production-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments-system
  labels:
    env: production
