wrong-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: payments-system
  name: wrong-env
  labels:
    app: nginx
    env: kungfudev
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: myregistry.com/nginx:latest
        resources:
          limits:
            memory: "250Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
